--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "flowbite": "^2.1.1",
         "pure-react-carousel": "^1.30.1",
         "react-hook-form": "^7.48.2"
