--- a/package.json
+++ b/package.json
@@ -20,10 +20,18 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@canvasjs/react-charts": "^1.0.0",
+        "@emotion/styled": "^11.11.0",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
+        "@mui/x-charts": "^6.18.3",
+        "chart.js": "^4.4.1",
+        "copy-to-clipboard": "^3.3.3",
+        "date-fns": "^2.30.0",
         "flowbite": "^2.1.1",
         "pure-react-carousel": "^1.30.1",
-        "react-hook-form": "^7.48.2"
+        "react-helmet": "^6.1.0",
+        "react-hook-form": "^7.48.2",
+        "react-toastify": "^9.1.3"
     }
 }
